--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Document</title>
+	<title>就是这么酷</title>
 	<link rel="stylesheet" href="style/style.css">
 
 </head>
